# patcher

./: .dependency-cruiser.js  .env  .gitignore  CLOUD_FUZZING_README.md  Cargo.toml  SECURITY_AUDIT_COMPLETION.md  SECURITY_AUDIT_REPORT.md  cli_authenticator.ps1  keygen.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  scan-ci.ts  scan.ts  test.json  test_results.txt  test_wasm.html  test_wasm_interface.js  tsconfig.json  wasm_check_results.txt
.github/workflows/: hexis-ci.yml  publish.yml
apps/: web - Shortcut.lnk
apps/web/: index.html  package.json  vite.config.ts  wrangler.jsonc
apps/web/public/: engine.wasm  robots.txt
apps/web/src/: App.tsx  env.d.ts  index.css  main.tsx  routeTree.gen.ts  router.tsx  sentry.ts  worker.ts
apps/web/src/components/: Dropzone.tsx  Navbar.tsx
apps/web/src/context/: ThemeContext.tsx
apps/web/src/hooks/: useScanner.ts  useWorker.ts
apps/web/src/lib/: auth.ts
apps/web/src/pages/: AdminPage.tsx  HistoryPage.tsx  HomePage.tsx  PrivacyPage.tsx  ReportPage.tsx  ScanPage.tsx  SettingsPage.tsx  SharedReportPage.tsx  SignInPage.tsx  SignUpPage.tsx  TermsPage.tsx
apps/web/src/pkg-web/: patcher.d.ts  patcher_bg.wasm.d.ts
apps/web/src/routes/: __root.tsx  admin.tsx  history.tsx  index.tsx  privacy.tsx  scan.tsx  settings.tsx  sign-in.tsx  sign-up.tsx  terms.tsx
apps/web/src/routes/report/: $scanId.tsx
apps/web/src/routes/shared/: $shareId.tsx
apps/web/src/utils/: sanitizer.ts  test-boundary.ts  trace.ts
apps/web/src/workers/: scanner.worker.ts
client/: analyze.js  browser.js
examples/: live_orchestrator.rs  live_parse.rs  python_usage.py  test_imports.rs
keys/: hexis-private-key.pem  hexis-public-key.pem
pkg-web/: package.json  patcher.js  patcher_bg.wasm
python/: README.md
python/hexis_native/: __init__.py  __init__.pyi  _hexis_native.cp313-win_amd64.pyd
scripts/: generate-license.ts  ingest_target.py  verify-pipeline.bat  verify-pipeline.sh
shared/: telemetry.ts
src/: analyzer.rs  fuzzer.rs  lib.rs  license.rs  mitigation.rs  slicer.rs
src/lifter/: cfg.rs  mod.rs  state.rs
src/loader/: imports.rs  mod.rs
src/relaxer/: mod.rs
src/scanner/: explorer.rs  heuristics.rs  mod.rs
src/simulator/: mod.rs
tests/: core_fuzz_test.rs
worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
worker/.wrangler/state/v3/cache/miniflare-CacheObject/: metadata.sqlite-shm  metadata.sqlite-wal
worker/.wrangler/state/v3/d1/miniflare-D1DatabaseObject/: metadata.sqlite-shm  metadata.sqlite-wal
worker/.wrangler/state/v3/kv/miniflare-KVNamespaceObject/: metadata.sqlite-shm  metadata.sqlite-wal
worker/.wrangler/tmp/bundle-IPwxaV/: middleware-loader.entry.ts
worker/.wrangler/tmp/bundle-gEAyl0/: middleware-loader.entry.ts
worker/.wrangler/tmp/bundle-okkl9X/: middleware-insertion-facade.js  middleware-loader.entry.ts
worker/.wrangler/tmp/bundle-tD3s6d/: middleware-insertion-facade.js  middleware-loader.entry.ts
worker/.wrangler/tmp/deploy-lmb4rv/: index.js
worker/.wrangler/tmp/dev-768nzD/: index.js
worker/.wrangler/tmp/dev-CAcV9F/: index.js  index.js.map
worker/.wrangler/tmp/dev-wdztSW/: 1e72d634ade8cdeaf1d90f4ebfa1a60c0f71ff3c-patcher_bg.wasm  index.js  index.js.map
worker/dist-audit/: README.md  index.js
worker/scripts/: copy-engine-assets.js
worker/src/: global.d.ts  index.ts  output.css
worker/src/db/: schema.sql
worker/src/lib/: auth.ts  keys.ts  license.ts  template.ts  triage.ts
worker/src/middleware/: auth.ts  quota.ts  rate-limit.ts
