[package]
name = "native_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "patcher" # Crucial fix: Directs wasm-pack to output 'patcher_bg.wasm'
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# REPLACE THESE TWO LINES:
goblin = { version = "0.8", default-features = false, features = ["pe32", "pe64", "elf32", "elf64", "mach32", "mach64", "endian_fd"] }
object = { version = "0.39", default-features = false, features = ["read_core", "elf", "pe", "macho", "archive"] }
iced-x86 = { version = "1.21", default-features = false, features = ["decoder", "std"] }
petgraph = { version = "0.6", default-features = false, features = ["graphmap"] }


[dev-dependencies]
proptest = "1.4"

[features]
default = ["console_error_panic_hook"]
cloud-test = []

[profile.release]
opt-level = "z"       # Optimizes aggressively for binary size
lto = true             # Link-Time Optimization strips unused code across crates
codegen-units = 1      # Reduces parallel generation to maximize size reduction optimizations
panic = "abort"        # Removes heavy stack unwinding infrastructure
strip = true           # Drops all debug symbols and tables automatically

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory"] # Post-processes the WASM to absolute minimal size


