[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "hexis-native"
version = "0.1.0"
description = "Hexis native Rust engine with Python bindings"
readme = "python/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hexis Team", email = "security@hexis.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://hexis.dev"
Documentation = "https://docs.hexis.dev"
Repository = "https://github.com/ericijeoma/patcher"
Issues = "https://github.com/ericijeoma/patcher/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "hexis_native._hexis_native"
bindings = "pyo3"
strip = true
release = true

[tool.maturin.sdist]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "pyproject.toml",
    "python/README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py40', 'py41']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["hexis_native"]
